--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-owl-carousel": "^2.3.3",
+    "react-router-dom": "^7.9.5",
     "swiper": "^12.0.2"
   },
   "devDependencies": {
